<resources>
    <string name="app_name">ePantry</string>
    <string name="title_fridge">Fridge</string>
    <string name="title_shopping">Shopping List</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_text">No account yet? Create one</string>
    <string name="login_bttn_text">Login</string>
    <string name="btn_resetpass_text">Forgot Password?</string>
    <string name="display_name">Display Name</string>
    <string name="email_signup">Email</string>
    <string name="create_account_prompt">Create Account</string>
    <string name="login_signup_link">Already a member? Login</string>
    <string name="title_home">Fridge</string>
    <string name="logo_splash_desc">logo splash</string>
    <string name="title_activity_email_verification">Email Verification</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="prompt_verify_email">Just One more step, Verify your email to continue!</string>
    <string name="resend_email_text">Resend Verification Email</string>
    <string name="login_return_txt">Return to Login</string>

    <!--For Shopping List    -->
    <string name="empty_shoppingList">You have nothing in your shopping list yet.</string>
    <string name="empty_favList">You have no favorite items.</string>
    <string name="shopList_button_remove_all">Remove All</string>
    <string name="shopList">Your Shopping List</string>
    <string name="remove_all">Remove All the Items?</string>
    <string name="minus_desc">Open the Remove Popup Menu</string>
    <string name="plus_desc">Open the Add Popup Menu</string>
    <string name="remove_checked">Remove Checked Items?</string>
    <string name="sort">Sort</string>
    <string name="sortAlpha">Alphabetically</string>
    <string name="sortFavorite">Favorites on top</string>
    <string name="sortQuantity">Quantity (ascending)</string>
    <string name="sortExpirationDate">Expiration Date</string>
    <string name="sortStorage">Sort by Storage</string>
    <string name="cancel">Cancel</string>
    <string name="add">Done</string>
    <string name="X">X</string>
    <string name="note">Item Notes</string>

    <string name="empty_recipeList">Recipe Feature coming soon!</string>
    <string name="search">Search here</string>
    <string name="no_item_found">No such item in your catalog.</string>

    <!--For Setting Page    -->
    <string name="nav_settings_txt">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="change_password">Change Password</string>
    <string name="setting_fav_list">Favorite List</string>
    <string name="reauth_email">Email</string>
    <string name="reauth_old">Old Password</string>
    <string name="reauth_new">New Password</string>
    <string name="title_activity_scan_item">ScanItem</string>
    <string name="scan_status_image">Scan status image</string>
    <string name="ready_to_scan">Ready To Scan</string>
    <string name="expiration">Expiration</string>
    <string name="quantity">Quantity</string>
    <string name="str_1">1</string>
    <string name="add_item_title">Add I tem</string>
    <string name="add_fav_title">Add Favorites</string>
    <string name="exp_date_hint">Expiration date: (optional)</string>
    <string name="palm_oil_txt">Palm Oil Ingredients</string>
    <string name="view">View</string>
    <string name="favorites">Favorites</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="all">All</string>
    <string name="add_suggested">Add Suggested</string>
    <string name="you_have_no_suggested_items">You have no suggested items.</string>
    <string name="add_add">add</string>
    <string name="NoFridgeItems">Looks like there is nothing in your pantry, start by scanning or adding them manually</string>
    <string name="ScanName">Scan a Product</string>
    <string name="add_bt_str">+</string>

</resources>