<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_reauth"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="10dp">

    <EditText
        android:id="@+id/reauth_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reauth_email" />
    <EditText
        android:id="@+id/reauth_old"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reauth_old"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/reauth_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reauth_new"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/confirm_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_password" />
</LinearLayout>