<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/add_item_bg"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".ui.Shopping.AddItem.AddFavItem">


    <Button
        android:id="@+id/txt_addFav_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/X"
        android:textColor="@color/colorBlack"
        android:textSize="19sp"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_addFav_done"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="+"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addFav_title"
        android:layout_width="145dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/vegan_style_font"
        android:text="@string/add_fav_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_addFav"
        android:layout_width="fill_parent"
        android:layout_marginTop="1dp"
        android:layout_height="2dip"
        app:layout_constraintTop_toBottomOf="@id/addFav_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000" />


    <TextView
        android:id="@+id/txt_emptyFavList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_favList"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView_favList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addFav_title" />



</androidx.constraintlayout.widget.ConstraintLayout>