<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/add_item_bg"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".ui.Shopping.AddItem.AddSuggItem">


    <Button
        android:id="@+id/txt_addSugg_close"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:text="@string/X"
        android:textColor="@color/colorBlack"
        android:textSize="19sp"
        android:backgroundTint="@android:color/transparent"
        style="@style/Widget.AppCompat.Button.Borderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addSugg_title"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/vegan_style_font"
        android:text="@string/add_suggested"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bt_addSugg_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/view_addSugg"
        android:layout_marginEnd="5dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:visibility="visible"
        android:background="@drawable/ic_plus_24dp"
        style="@style/Widget.AppCompat.Button.Borderless"/>

    <View
        android:id="@+id/view_addSugg"
        android:layout_width="fill_parent"
        android:layout_marginTop="1dp"
        android:layout_height="2dip"
        app:layout_constraintTop_toBottomOf="@id/addSugg_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#000" />


    <TextView
        android:id="@+id/txt_emptySuggList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_no_suggested_items"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listView_suggList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/addSugg_buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addSugg_title" />

    <LinearLayout
        android:id="@+id/addSugg_buttonsLayout"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/listView_suggList">

        <Button
            android:id="@+id/bt_addSugg_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="#F44336"
            android:text="remove" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>